--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -12,12 +12,13 @@
     </section>
   </aside>
   <div class="col-md-8">
-    <!-- <% if @user.posts.any? %>
+    <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
-      <ol class="posts">
-        <%= render @posts %>
-      </ol>
-      <%= will_paginate @microposts %>
-    <% end %> -->
+      <% @user.posts.each do |post| %>
+        <ol class="posts">
+          <%= post.content %>
+        </ol>
+      <% end %>
+    <% end %>
   </div>
 </div>
