Did some changes in design and user edit

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,10 @@ header {
   }
 }
 
+.form-control {
+  margin-bottom: 20px;
+}
+
 .top-navbar {
   position: fixed;
   z-index: 1043;
@@ -31,5 +35,4 @@ header {
 
 .logo {
   color: white;
-
 }
