--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,23 +1,24 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
+      <h1><%= gravatar_for @user %></h1>
       <h1>
         <%= @user.first_name %>
         <%= @user.last_name %>
       </h1>
-      <h2>
-        <%= @user.birthday %>
-        <%= @user.email %>
-      </h2>
+      <h2><%= @user.email %></h2>
+      <h2>Age: <%= age(@user.birthday) %></h2>
     </section>
   </aside>
   <div class="col-md-8">
     <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
       <% @user.posts.each do |post| %>
-        <ol class="posts">
-          <%= post.content %>
-        </ol>
+        <div class="posts">
+          <%= post.content %><br>
+          Likes: <%= post.postlike.count %>
+          <br><br>
+        </div>
       <% end %>
     <% end %>
   </div>
