--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar top-navbar">
   <div class="container">
     <%= link_to "Facebook Clone", root_path, class: "logo" %>
-    <nav class="float-right">
+    <nav class="elements-to-right">
       <ul class="nav navbar-nav">
         <li><%= link_to "Friends",   root_path %></li>
         <% if user_signed_in? %>
