--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,9 +1,19 @@
+<div class="row">
+<div class="col-md-4 ">
 <h2>Hello World</h2>
 <p>
   The time is now: <%= Time.now %>
 </p>
 
+</div>
+
+<div class="col-md-8">
 <% if user_signed_in? %>
+<%= render 'layouts/post_new'%>
+</div>
+</div>
+<div class='row'>
+<div class="col-md-12">
   Logged in as <strong><%= current_user.email %></strong>.
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
@@ -12,45 +22,7 @@
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>
-  <br>
-  <br>
 
-  <br>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-    <br>
-  <br>
-
-  <br>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-    <br>
-  <br>
-
-  <br>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+</div>
+</div>
+</div>
