--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,28 +1,28 @@
 <div class="row">
-<div class="col-md-4 ">
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
-
-</div>
-
-<div class="col-md-8">
-<% if user_signed_in? %>
-<%= render 'layouts/post_new'%>
-</div>
+  <div class="col-md-4 ">
+    <h1><%= gravatar_for current_user %></h1>
+    <h2>
+      Hello 
+      <%= current_user.first_name if current_user.first_name %>
+      <%= current_user.last_name if current_user.last_name %>
+    </h2>
+    <p>The time is now: <%= Time.now %></p>
+  </div>
+  <div class="col-md-8">
+    <%= render 'layouts/post_new'%>
+    <%= render 'posts', :class => 'posts' %>
+  </div>
 </div>
 <div class='row'>
-<div class="col-md-12">
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  <div class="col-md-12">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
-
-</div>
-</div>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+  </div>
 </div>
