Put a conditional to users birthday

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -7,7 +7,9 @@
         <%= @user.last_name %>
       </h1>
       <h3><%= @user.email %></h3>
-      <h3>Age: <%= age(@user.birthday) %></h3>
+      <% if @user.birthday %>
+        <h3>Age: <%= age(@user.birthday) %></h3>
+      <% end %>
     </section>
   </aside>
   <div class="col-md-8">
