--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -8,13 +8,7 @@
         <%= current_user.last_name if current_user.last_name %>
       </h2>
     <% else %>
-      <h1>Hello stranger!!!</h1>
-      <h2>
-        Please, 
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
-         or 
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-      </h2>
+      <%= render 'layouts/check_signin' %>
     <% end %>
     <p>The time is now: <%= Time.now %></p>
   </div>
