--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", user_path(current_user) %></li>
-              <li><%= link_to "Settings", edit_user_registration_path(current_user) %></li>
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
