--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
   <% if user_signed_in? %>
     <div class="col-md-8">
       <%= render 'layouts/post_new'%>
-      <%= render 'posts', :class => 'posts' %>
+      <%= render 'posts', :class => 'posts', :posts => @posts %>
     </div>
     <% end %>
 </div>
