--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,8 @@
     <%= link_to "Facebook Clone", root_path, class: "logo" %>
     <nav class="elements-to-right">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Friends",   root_path %></li>
+        <li><%= link_to "All users", user_index_path %></li>
+        <li><%= link_to "Friends", root_path %></li>
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -11,7 +12,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", user_path(current_user) %></li>
-              <li><%= link_to "Settings", edit_user_registration_path(current_user) %></li>
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
