--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -7,10 +7,23 @@
         <%= @user.last_name %>
       </h1>
       <h3><%= @user.email %></h3>
-      <%if @user.birthday%>
-      <h3>Age: <%= age(@user.birthday) %></h3>
-      <%end%>
+      <% if @user.birthday %>
+        <h3>Age: <%= age(@user.birthday) %></h3>
+      <% end %>
     </section>
   </aside>
-  <%= render 'posts_with_comments'%>
+  <div class="col-md-8">
+    <% if @user.posts.any? %>
+      <h3>Posts (<%= @user.posts.count %>)</h3>
+      <% @user.posts.each do |post| %>
+        <div class="posts">
+          <p class='post-content'><%= post.content %></p>
+          <p class='post-likes'>
+            <%= post.user.first_name if post.user.first_name %>
+            <%= post.user.last_name if post.user.last_name %>
+             - Likes: <%= post.postlike.count %></p>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 </div>
