--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -15,15 +15,7 @@
   <div class="col-md-8">
     <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
-      <% @user.posts.each do |post| %>
-        <div class="posts">
-          <p class='post-content'><%= post.content %></p>
-          <p class='post-likes'>
-            <%= post.user.first_name if post.user.first_name %>
-            <%= post.user.last_name if post.user.last_name %>
-             - Likes: <%= post.postlike.count %></p>
-        </div>
-      <% end %>
+      <%= render 'posts/posts_with_comments', :posts => @user.posts %>
     <% end %>
   </div>
 </div>
