--- a/app/views/layouts/_post_new.html.erb
+++ b/app/views/layouts/_post_new.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="new-post">
     <%= form_for(:post, url: posts_new_path) do |f| %>
-      <%= f.label :content %>
-      <%= f.text_area :content, class: 'form-control' %>
+      <%= f.label 'Tell me everything:' %>
+      <%= f.text_area :content, class: "post-area form-control" %>
 
       <%= f.submit "New Post", class: "btn btn-primary" %>
     <% end %>
