--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,25 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.post-area {
+  height:130px !important;
+}
+
+.posts {
+  margin-top: 20px;
+  padding-top: 20px;
+  background-color: white;
+}
+
+.post-content {
+  border: ridge;
+  padding: 12px;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.post-likes {
+  padding-right: 30px;
+  float: right;
+}
+
+.new-post {
+  font-size: 30px;
+}
