--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the User controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.gravatar {
+  border-radius: 20px;
+}
+
+.user-block {
+  display: flex;
+  margin: 20px;
+  padding: 10px;
+  background-color: white;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  padding-left: 20px;
+}
