--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,1 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(:post) do |f| %>
-      <%= f.label :content %>
-      <%= f.text_field :content, class: 'form-control' %>
-
-      <%= f.submit "New Post", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
+<%= render 'layouts/post_new' %>
