--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <section class="user_info user-space text-center">
       <h1><%= gravatar_for @user %></h1>
       <h1>
         <%= @user.first_name %>
