Solved login problem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
     <%= yield %>
-    <%= render 'layouts/footer' %>
-  </div>
+    <% if user_signed_in? %>
+      <%= render 'layouts/footer' %>
+    <% end %>
+    </div>
   </body>
 </html>
