--- a/app/views/posts/_posts_with_comments.html.erb
+++ b/app/views/posts/_posts_with_comments.html.erb
@@ -3,8 +3,14 @@
     <p class='post-content'><%= post.content %></p>
     <p class='post-likes'>
       <%= post.user.first_name if post.user.first_name %>
-      <%= post.user.last_name if post.user.last_name %>
-       - Likes: <%= post.postlike.count %></p>
+      <%= post.user.last_name if post.user.last_name %> -
+      <% if post_liked?(post) %>
+        <%= link_to "Liked", find_postlike(post) , method: :delete %>
+        <%= post.postlike.count %></p>
+      <% else %>
+        <%= link_to "Not Liked", postlikes_path(post.id) %>
+        <%= post.postlike.count %></p>
+      <% end %>
     <div class="comments">
       <ul>
         <% if post.comments.any? %>
