--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,12 @@
 <footer class='row'>
   <div class="bottom-navbar text-center">
     <div class="col-md-12">
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
+      Fakebook - Our Facebook Clone
+      <div class="pt-5">
+        <%= link_to 'About us', about_path,   :class => 'navbar-link' %> |
+        <%= link_to 'Help',     help_path,    :class => 'navbar-link' %> |
+        <%= link_to "Contact",  contact_path, :class => 'navbar-link' %>
+      </div>
     </div>
   </div>
 </footer>
