--- a/app/views/posts/_posts_with_comments.html.erb
+++ b/app/views/posts/_posts_with_comments.html.erb
@@ -1,17 +1,21 @@
 <% posts.each do |post| %>
   <div class="posts">
     <p class='post-content'><%= post.content %></p>
-    <p class='post-likes'>
-      <%= post.user.first_name if post.user.first_name %>
-      <%= post.user.last_name if post.user.last_name %> -
-      <% if post_liked?(post) %>
-        <%= link_to "Liked", find_postlike(post) , method: :delete %>
-        <%= post.postlike.count %></p>
-      <% else %>
-        <%= link_to "Not Liked", postlikes_path(:post_information => { :post_id => post.id, :user_id => current_user.id }), method: post%>
-        <%= post.postlike.count %></p>
-        
-      <% end %>
+    <div class='post-likes'>
+      <p>
+        <%= post.user.first_name if post.user.first_name %>
+        <%= post.user.last_name if post.user.last_name %> -
+        <% if post_liked?(post) %>
+          <%= link_to "Liked", find_postlike(post) , method: :delete %>
+          <%= post.postlike.count %>
+        <% else %>
+          <%= link_to "Not Liked", postlikes_path(:post_information => { :post_id => post.id, 
+                                                                         :user_id => current_user.id }), method: post%>
+          <%= post.postlike.count %>
+        <% end %>
+      </p>
+      <p><%= link_to "Create a comment", new_post_comment_path(post.id) %></p>
+    </div>
     <div class="comments">
       <ul>
         <% if post.comments.any? %>
@@ -19,14 +23,15 @@
             <li class="comment-item"> <%= comment.comment_content %> </li>
             <li class="comment-item-author">
               <%= comment.user.first_name%>
-              <%= comment.user.last_name%>
-               <% if comment_liked?(comment) %>
+              <%= comment.user.last_name%> - 
+              <% if comment_liked?(comment) %>
                 <%= link_to "Liked", commentlike_path(find_commentlike(comment)), method: :delete %>
                 <%= comment.comment_like.count %></p>
               <% else %>
-                <%= link_to "Not Liked", commentlike_index_path(:comment_information => { :comment_id => comment.id, :user_id => current_user.id }), method: post %>
+                <%= link_to "Not Liked", commentlike_index_path(:comment_information => { :comment_id => comment.id, 
+                                                                                          :user_id => current_user.id }), method: post %>
                 <%= comment.comment_like.count %></p>
-                        <% end %>
+              <% end %>
             </li>
           <%end%>
         <%end%>
