--- a/app/views/user/_user_aside.html.erb
+++ b/app/views/user/_user_aside.html.erb
@@ -3,8 +3,12 @@
     <h1><%= gravatar_for current_user %></h1>
     <h2>
       Hello 
-      <%= current_user.first_name if current_user.first_name %>
-      <%= current_user.last_name if current_user.last_name %>
+      <% if current_user.first_name || current_user.last_name %>
+        <%= current_user.first_name %>
+        <%= current_user.last_name %>
+      <% else %>
+        stranger
+      <% end %>
     </h2>
     <p>The time is now: <%= Time.now %></p>
   </div>
