--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <%= render 'user/user_aside' %>
   <div class="col-md-8">
-    <h1>About us</h1>
-    <p>This page was created as the final project in the Ruby on Rails course in Microverse.</p>
+    <h1 class="text-center pb-50">About</h1>
+    <p class="static-pages-text">This page was created as the final project in the Ruby on Rails course in <a href="https://www.microverse.org/"  target="_blank">Microverse</a>.</p>
+    <p class="static-pages-text">The objective was to create a facebook-like page where the users ca create an account, or login with their own Facebook account, add other users as friends, make posts, comment posts and like both the posts and comments.</p>
   </div>
 </div>
