--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <%= render 'user/user_aside' %>
   <div class="col-md-8">
-    <h1>Contact</h1>
-    <p>This page was created by Alexawesome and Phalado</p>
+    <h1 class="text-center pb-50">Contact</h1>
+    <p class="static-pages-text">This page was created by Alexawesome and Phalado</p>
   </div>
 </div>
