Change the notifications in the navbar

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+.user-block-small {
+  justify-content: center;
+}
+
 ul {
   list-style: none;
   padding-left: 20px;
