--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,38 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "All users", user_index_path, class: "header-link" %></li>
         <li><%= link_to "Friends", friendships_path, class: "header-link" %></li>
-        <li><%= link_to "Notifications", '/friendships/notifications', class: "header-link" %></li>
+        <% pending = pending_friendship(current_user)%>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle header-link" data-toggle="dropdown">
+            <%= pending.count %> Notifications<b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <% pending.each do |pend| %>
+              <li>
+                <p>
+                  <% if pend.first_name || pend.last_name %>
+                    <%= pend.first_name %>
+                    <%= pend.last_name %>
+                  <% else %>
+                    <%= pend.email %>
+                  <% end %>
+                  sent you a friend request
+                </p>
+                <p>
+                  <%= link_to "Profile", user_path(pend.id) %> | 
+                  <%= link_to 'Accept', edit_friendship_path(get_friendship(pend).id) %> |
+                  <%= link_to 'Reject', edit_friendship_path(get_friendship(pend).id) %>
+                </p>
+              </li>
+              <li class="divider"></li>
+            <% end %>
+            <li class="divider"></li>
+            <li><%= link_to "All Notifications", '/friendships/notifications' %></li>
+          </ul>
+        </li>
+        <!-- 
+        <li><%= link_to "#{pending.count} Notifications", '/friendships/notifications', class: "header-link" %></li>
+         -->
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle header-link" data-toggle="dropdown">
