Changed the get_inverse method from the helper to the controller

--- a/app/views/user/_user_profile.html.erb
+++ b/app/views/user/_user_profile.html.erb
@@ -25,7 +25,7 @@
         <% elsif friendship_status(user) == 'irequested' %>
           <%= link_to 'Cancel request', friendship_path(get_friendship(user).id), method: :delete %>
         <% elsif friendship_status(user) == 'friends' %>
-          <%= link_to 'Unfriend', friendship_path(get_friendship(user).id), :onclick => "#{ "confirm('Are you sure?')" }", method: :delete %>
+          <%= link_to 'Unfriend', friendship_path(get_friendship(user).id), :data => { :confirm => 'Are you sure?' }, method: :delete %>
         <% end %>
       </li>
     </ul>
