--- a/app/views/posts/_posts_with_comments.html.erb
+++ b/app/views/posts/_posts_with_comments.html.erb
@@ -14,7 +14,8 @@
           <%= post.postlike.count %>
         <% else %>
           <%= link_to "Not Liked", postlikes_path(:post_information => { :post_id => post.id, 
-                                                                         :user_id => current_user.id }), method: post %>
+                                                                         :user_id => current_user.id }),
+                                                                          method: post %>
           <%= post.postlike.count %>
         <% end %>
       </p>
@@ -37,7 +38,8 @@
                 <%= comment.comment_like.count %></p>
               <% else %>
                 <%= link_to "Not Liked", commentlike_index_path(:comment_information => { :comment_id => comment.id, 
-                                                                                          :user_id => current_user.id }), method: post %>
+                                                                                          :user_id => current_user.id }), 
+                                                                                           method: post %>
                 <%= comment.comment_like.count %></p>
               <% end %>
             </li>
