--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
                   <p class="pl-10">
                     <%= link_to "Profile", user_path(pend.id) %> | 
                     <%= link_to 'Accept', edit_friendship_path(get_friendship(pend).id) %> |
-                    <%= link_to 'Reject', edit_friendship_path(get_friendship(pend).id) %>
+                    <%= link_to 'Reject', friendship_path(get_friendship(pend).id), method: :delete %>
                   </p>
                 </li>
                 <li class="divider"></li>
